@@ -179,13 +179,13 @@ the footnotes: first_, second_, third_.
     <paragraph>
         Here are some internal cross-references to the targets generated by
         the footnotes: \n\
-        <reference refname="first">
+        <reference name="first" refname="first">
             first
         , \n\
-        <reference refname="second">
+        <reference name="second" refname="second">
             second
         , \n\
-        <reference refname="third">
+        <reference name="third" refname="third">
             third
         .
 """],
